--- a/src/AdminWebMailBundle/Resources/views/login.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/login.html.twig
@@ -5,11 +5,11 @@
     <form role="form" method="post" action="">
         <div class="form-group">
             <label for="inputUsername">Username</label>
-            <input type="text" class="form-control" id="inputUsername" name="_username" placeholder="Username" value="{{ last_username }}">
+            <input type="text" class="form-control" id="inputUsername" name="_username" placeholder="default: admin" value="{{ last_username }}">
         </div>
         <div class="form-group">
             <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword" name="_password" placeholder="Password">
+            <input type="password" class="form-control" id="inputPassword" name="_password" placeholder="default: 1234">
         </div>
         <button type="submit" class="btn btn-default">Login</button>
     </form>
